Fix text alignment issue

--- a/app/assets/stylesheets/_signup.sass
+++ b/app/assets/stylesheets/_signup.sass
@@ -45,7 +45,7 @@
   text-align: center
 
 body p 
-  text-aligner: center
+  text-align: justify
 
 label 
   font-size: 0.8em
